force-app/main/default/objects/Opportunity_Shipment__c/Opportunity_Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment (Opportunity)</label>
    <nameField>
        <displayFormat>OSP-{00000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>