force-app/main/default/objects/Opportunity_Shipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The carrier type should be Shipping Carrier.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Shipping Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>