force-app/main/default/objects/Opportunity_Shipment__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <formula>Opportunity__r.GL_Account_Variable_1__r.Name</formula>
    <label>GL Account Variable 1</label>
    <type>Text</type>
</CustomField>