force-app/main/default/objects/Opportunity_Shipment__c/fields/Shipment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Comment__c</fullName>
    <label>Shipment Comment</label>
    <type>TextArea</type>
</CustomField>