force-app/main/default/objects/Opportunity_Shipment__c/fields/Shipping_Reference__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Reference__c</fullName>
    <label>Shipping Reference</label>
    <type>TextArea</type>
</CustomField>